--- a/ESR/references.bib
+++ b/ESR/references.bib
@@ -318,3 +318,13 @@
   journal={arXiv preprint arXiv:1605.07811},
   year={2016}
 }
+
+@article{vakhania1975topological,
+  title={The topological support of Gaussian measure in Banach space},
+  author={Vakhania, NN},
+  journal={Nagoya Mathematical Journal},
+  volume={57},
+  pages={59--63},
+  year={1975},
+  publisher={Cambridge University Press}
+}
